# MLOps_Neechev

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  client.py  commands.py  docker-compose.yaml  pyproject.toml  requirements.txt  to_onnx.py  weights.dvc
.dvc/: config
mnist/: infer.py  run_server.py  train.py
mnist/config/: config.yaml
mnist/data/: my_data_module.py
mnist/model/: my_model.py  resnet.py  utils.py
model_inference/: n_models=1_dynamic_batch  n_models=2_dynamic_batch
model_repository/onnx-resnet-18/: config.pbtxt
model_repository/onnx-resnet-18/1/: model.onnx.dvc
resnet/model/: resnet.py
