[tool.poetry]
name = "mlops-neechev"
version = "0.1.0"
description = ""
authors = ["Fakazuma <me@example.com>"]
readme = "README.md"

packages = [
    {include = "resnet" }
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25"
click = "^8.1.7"
timm = "^0.9.7"
torch = "2.0.0"
torchvision = "0.15.1"
fire = "^0.5.0"
dvc = "^3.27.0"
dvc-gdrive = "^2.20.0"
hydra-core = "1.3"
lightning = "^2.1.0"
transformers = "^4.34.1"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"
pre-commit = "^3.4.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
